Añadir al cnfig files, los ficheros de las muestras

--- a/auto_snakemake.ipynb
+++ b/auto_snakemake.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "          \"\"\", chr1, chr2)\n",
     "    \n",
     "    subprocess.run([\"sed\", \"-i\", \"6,+12s/\" + chr1 + \"/\" + chr2 + \"/g\", \"config.yaml\"])\n",
-    "    subprocess.run([\"sed\", \"-i\", \"24s/\" + chr1 + \"/\" + chr2 + \"/g\", \"config.yaml\"])\n",
+    "    subprocess.run([\"sed\", \"-i\", \"39s/\" + chr1 + \"/\" + chr2 + \"/g\", \"config.yaml\"])\n",
     "\n",
     "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"data/original_bam/filtering/ERR696683_\" + chr2 + \"_sorted.bam\"])"
    ]
@@ -105,7 +105,7 @@
    "source": [
     "## reset config \n",
     "subprocess.run([\"sed\", \"-i\", \"6,+12s/chr17/chr3/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"24s/chr17/chr3/g\", \"config.yaml\"])"
+    "subprocess.run([\"sed\", \"-i\", \"39s/chr17/chr3/g\", \"config.yaml\"])"
    ]
   },
   {
@@ -162,14 +162,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['sed', '-i', '65s/PIK3CA/APC/g', 'config.yaml'], returncode=0)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "subprocess.run([\"sed\", \"-i\", \"6,+12s/chr3/chr5/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\",\"24s/chr3/chr5/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"31s/chromosome.3.fa.gz/chromosome.5.fa.gz/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"50s/PIK3CA/APC/g\", \"config.yaml\"])\n"
+    "subprocess.run([\"sed\", \"-i\", \"24,+12s/chr3/chr5/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\",\"39s/chr3/chr5/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\", \"46s/chromosome.3.fa.gz/chromosome.5.fa.gz/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\", \"65s/PIK3CA/APC/g\", \"config.yaml\"])\n"
    ]
   },
   {
@@ -217,14 +229,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['sed', '-i', '65s/APC/BRAF/g', 'config.yaml'], returncode=0)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "subprocess.run([\"sed\", \"-i\", \"6,+12s/chr5/chr7/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\",\"24s/chr5/chr7/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"31s/chromosome.5.fa.gz/chromosome.7.fa.gz/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"50s/APC/BRAF/g\", \"config.yaml\"])\n"
+    "subprocess.run([\"sed\", \"-i\", \"24,+12s/chr5/chr7/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\",\"39s/chr5/chr7/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\", \"46s/chromosome.5.fa.gz/chromosome.7.fa.gz/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\", \"65s/APC/BRAF/g\", \"config.yaml\"])"
    ]
   },
   {
@@ -272,14 +296,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['sed', '-i', '65s/BRAF/KRAS/g', 'config.yaml'], returncode=0)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "subprocess.run([\"sed\", \"-i\", \"6,+12s/chr7/chr12/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\",\"24s/chr7/chr12/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"31s/chromosome.7.fa.gz/chromosome.12.fa.gz/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"50s/BRAF/KRAS/g\", \"config.yaml\"])\n"
+    "subprocess.run([\"sed\", \"-i\", \"24,+12s/chr7/chr12/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\",\"39s/chr7/chr12/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\", \"46s/chromosome.7.fa.gz/chromosome.12.fa.gz/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\", \"65s/BRAF/KRAS/g\", \"config.yaml\"])"
    ]
   },
   {
@@ -327,14 +363,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['sed', '-i', '65s/KRAS/TP53/g', 'config.yaml'], returncode=0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "subprocess.run([\"sed\", \"-i\", \"6,+12s/chr12/chr17/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\",\"24s/chr12/chr17/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"31s/chromosome.12.fa.gz/chromosome.17.fa.gz/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"50s/KRAS/TP53/g\", \"config.yaml\"])\n"
+    "subprocess.run([\"sed\", \"-i\", \"24,+12s/chr12/chr17/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\",\"39s/chr12/chr17/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\", \"46s/chromosome.12.fa.gz/chromosome.17.fa.gz/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\", \"65s/KRAS/TP53/g\", \"config.yaml\"])\n"
    ]
   },
   {
@@ -375,15 +423,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['sed', '-i', '65s/TP53/PIK3CA /g', 'config.yaml'], returncode=0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## reset config \n",
     "subprocess.run([\"sed\", \"-i\", \"6,+12s/chr17/chr3/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"24s/chr17/chr3/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"31s/chromosome.17.fa.gz/chromosome.3.fa.gz/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"50s/TP53/PIK3CA/g\", \"config.yaml\"])"
+    "subprocess.run([\"sed\", \"-i\", \"24,+12s/chr17/chr3/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\",\"39s/chr17/chr3/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\", \"46s/chromosome.17.fa.gz/chromosome.3.fa.gz/g\", \"config.yaml\"])\n",
+    "subprocess.run([\"sed\", \"-i\", \"65s/TP53/PIK3CA /g\", \"config.yaml\"])"
    ]
   },
   {
