cambiar texto para explicar el notebook

--- a/auto_snakemake.ipynb
+++ b/auto_snakemake.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Automatation of the CLI commands of the Snakemake workflow**"
+    "# **Automation of the CLI commands of the Snakemake workflow**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This Jupyter Notebook has the objective to automate the snakemake commands. \n",
+    "\n",
+    "It is useful for a quick doing, but using this instead command line could might not give you the hability of having some of the good features of snakemake."
    ]
   },
   {
@@ -61,11 +70,7 @@
    "source": [
     "* rule pre_processing\n",
     "\n",
-    "Filtering the chromosomes, make sure that the chromosomes of the config file are **ch3**. \n",
-    "\n",
-    "This rule is preatty long too... good luck\n",
-    "\n",
-    "When it finished, it is recomended to delete the SAM files not oredered."
+    "Filtering the chromosomes, make sure that the chromosomes of the config file are **ch3**. "
    ]
   },
   {
