cambiar texto para explicar el notebook

--- a/auto_snakemake.ipynb
+++ b/auto_snakemake.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Jupyter Notebook has the objective to automate the snakemake commands. \n",
+    "This Jupyter Notebook has the objective of automating Snakemake commands.\n",
     "\n",
-    "It is useful for a quick doing, but using this instead command line could might not give you the hability of having some of the good features of snakemake."
+    "While it can be useful for quick tasks, using this instead of the command line may not provide you with the ability to access some of Snakemake's advanced features."
    ]
   },
   {
