resumir el codigo de subprocess

--- a/auto_snakemake.ipynb
+++ b/auto_snakemake.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,15 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subprocess.run([\"sed\", \"-i\", \"6,+12s/chr3/chr5/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"24,+12s/chr3/chr5/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\",\"39s/chr3/chr5/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"46s/chromosome.3.fa.gz/chromosome.5.fa.gz/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"65s/PIK3CA/APC/g\", \"config.yaml\"])\n"
+    "changes_chr3_to_5 = [\"6,+12s/chr3/chr5/g\", \"24,+12s/chr3/chr5/g\", \"39s/chr3/chr5/g\",\n",
+    "                    \"46s/chromosome.3.fa.gz/chromosome.5.fa.gz/g\", \"65s/PIK3CA/APC/g\"]\n",
+    "for change in changes_chr3_to_5:\n",
+    "    subprocess.run([\"sed\", \"-i\", change, \"config.yaml\"])"
    ]
   },
   {
@@ -218,15 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subprocess.run([\"sed\", \"-i\", \"6,+12s/chr5/chr7/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"24,+12s/chr5/chr7/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\",\"39s/chr5/chr7/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"46s/chromosome.5.fa.gz/chromosome.7.fa.gz/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"65s/APC/BRAF/g\", \"config.yaml\"])"
+    "changes_chr5_to_7 = [\"6,+12s/chr5/chr7/g\", \"24,+12s/chr5/chr7/g\", \"39s/chr5/chr7/g\",\n",
+    "                     \"46s/chromosome.5.fa.gz/chromosome.7.fa.gz/g\", \"65s/APC/BRAF/g\"]\n",
+    "for change in changes_chr5_to_7:\n",
+    "    subprocess.run([\"sed\", \"-i\", change, \"config.yaml\"])   "
    ]
   },
   {
@@ -274,15 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subprocess.run([\"sed\", \"-i\", \"6,+12s/chr7/chr12/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"24,+12s/chr7/chr12/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\",\"39s/chr7/chr12/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"46s/chromosome.7.fa.gz/chromosome.12.fa.gz/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"65s/BRAF/KRAS/g\", \"config.yaml\"])"
+    "changes_chr7_to_12 = [\"6,+12s/chr7/chr12/g\", \"24,+12s/chr7/chr12/g\", \"39s/chr7/chr12/g\",\n",
+    "                      \"46s/chromosome.7.fa.gz/chromosome.12.fa.gz/g\", \"65s/BRAF/KRAS/g\"]\n",
+    "for change in changes_chr7_to_12:\n",
+    "    subprocess.run([\"sed\", \"-i\", change, \"config.yaml\"])     "
    ]
   },
   {
@@ -330,15 +327,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subprocess.run([\"sed\", \"-i\", \"6,+12s/chr12/chr17/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"24,+12s/chr12/chr17/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\",\"39s/chr12/chr17/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"46s/chromosome.12.fa.gz/chromosome.17.fa.gz/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"65s/KRAS/TP53/g\", \"config.yaml\"])\n"
+    "changes_chr12_to_17 = [\"6,+12s/chr12/chr17/g\", \"24,+12s/chr12/chr17/g\", \"39s/chr12/chr17/g\",\n",
+    "                       \"46s/chromosome.12.fa.gz/chromosome.17.fa.gz/g\", \"65s/KRAS/TP53/g\"]\n",
+    "for change in changes_chr12_to_17:\n",
+    "    subprocess.run([\"sed\", \"-i\", change, \"config.yaml\"])"
    ]
   },
   {
@@ -379,16 +375,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "## reset config \n",
-    "subprocess.run([\"sed\", \"-i\", \"6,+12s/chr17/chr3/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"24,+12s/chr17/chr3/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\",\"39s/chr17/chr3/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"46s/chromosome.17.fa.gz/chromosome.3.fa.gz/g\", \"config.yaml\"])\n",
-    "subprocess.run([\"sed\", \"-i\", \"65s/TP53/PIK3CA/g\", \"config.yaml\"])"
+    "changes_chr17_to_3 = [\"6,+12s/chr17/chr3/g\", \"24,+12s/chr17/chr3/g\", \"39s/chr17/chr3/g\",\n",
+    "                      \"46s/chromosome.17.fa.gz/chromosome.3.fa.gz/g\", \"65s/TP53/PIK3CA/g\"]\n",
+    "for change in changes_chr17_to_3:\n",
+    "    subprocess.run([\"sed\", \"-i\", change, \"config.yaml\"])"
    ]
   },
   {
