Aplicar DRY a auto_snakemake

--- a/auto_snakemake.ipynb
+++ b/auto_snakemake.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* rules reference_genome; fastqc; fastp; fastqc_trimmed; bwa_mapping; sam_to_bam; delete_duplicates; extracting_variants; vep_install; vep_cli; parsing_dataR"
+    "## Function for the next rules:\n",
+    "\n",
+    "* reference_genome \n",
+    "* fastqc \n",
+    "* fastp\n",
+    "* fastqc_trimmed\n",
+    "* bwa_mapping \n",
+    "* sam_to_bam \n",
+    "* delete_duplicates \n",
+    "* extracting_variants \n",
+    "* vep_install \n",
+    "* vep_cli \n",
+    "* parsing_dataR"
    ]
   },
   {
@@ -121,36 +133,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Running the workflow for the 3º chormosome\n",
-    "\n",
-    "subprocess.run([\"snakemake\", \"--cores\", \"1\", \"data/reference/genome.fa\"]) ## rule reference_genome \n",
-    "\n",
-    "for sample in sample_list:\n",
-    "    ## Quality inspection\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\",\n",
-    "                    \"results/fastqc_result/\" + sample + \"_chr3_1_fastqc.html\",   \n",
-    "                    \"data/processed/\" + sample + \"_chr3_1_fastp.fastq.gz\",   \n",
-    "                    \"results/fastqc_result/trimmed/\" + sample + \"_chr3_1_fastp_fastqc.html\"])\n",
+    "def snake_workflow(chr: str):\n",
+    "    ## Running the workflow for x chormosome                                                                       \n",
+    "    if chr == \"chr3\":\n",
+    "        subprocess.run([\"snakemake\", \"--cores\", \"1\", \"data/reference/genome.fa\"])\n",
+    "    elif chr == \"chr5\" or chr == \"chr7\" or chr == \"chr12\" or chr == \"chr17\":\n",
+    "        subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--force\", \"data/reference/genome.fa\"]) \n",
     "    \n",
-    "for sample in sample_list:\n",
-    "    ## Mapping reads\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\",\n",
-    "                    \"results/mapped_reads/\" + sample + \"_chr3_sorted.sam\",   \n",
-    "                    \"results/mapped_reads/bam_files/\" + sample + \"_chr3_sorted.bam\",   \n",
-    "                    \"results/mapped_reads/bam_files/\" + sample + \"_chr3_dedup.bam\"])\n",
+    "    for sample in sample_list:\n",
+    "        ## Quality inspection\n",
+    "        subprocess.run([\n",
+    "            \"snakemake\", \"--cores\", \"1\", \"--use-conda\",\n",
+    "            \"results/fastqc_result/\" + sample + \"_\" + chr + \"_1_fastqc.html\",   \n",
+    "            \"data/processed/\" + sample + \"_\" + chr + \"_1_fastp.fastq.gz\",   \n",
+    "            \"results/fastqc_result/trimmed/\" + sample + \"_\" + chr + \"_1_fastp_fastqc.html\"\n",
+    "        ])\n",
+    "        \n",
+    "    for sample in sample_list:\n",
+    "        ## Mapping reads\n",
+    "        subprocess.run([\n",
+    "            \"snakemake\", \"--cores\", \"1\", \"--use-conda\",\n",
+    "            \"results/mapped_reads/\" + sample + \"_\" + chr + \"_sorted.sam\",   \n",
+    "            \"results/mapped_reads/bam_files/\" + sample + \"_\" + chr + \"_sorted.bam\",   \n",
+    "            \"results/mapped_reads/bam_files/\" + sample + \"_\" + chr + \"_dedup.bam\"\n",
+    "        ])\n",
+    "        \n",
+    "    for sample in sample_list:\n",
+    "        # Extracting variants  \n",
+    "        subprocess.run([\n",
+    "            \"snakemake\", \"--cores\", \"1\", \"--use-conda\", \n",
+    "            \"results/variants/\" + sample + \"_\" + chr + \".vcf\"\n",
+    "        ])   \n",
     "    \n",
-    "for sample in sample_list:\n",
-    "    # Extracting variants  \n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"results/variants/\" + sample + \"_chr3.vcf\"])   \n",
+    "    ## Downloading VEP \n",
+    "    if chr == \"chr3\": \n",
+    "        subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"vep_install_db\"])\n",
     "\n",
-    "## Downloading VEP\n",
-    "subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"vep_install_db\"])\n",
-    "## VEP CLI\n",
-    "for sample in sample_list:\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"results/variants/vep/\" + sample + \"_chr3.txt\"])\n",
-    "\n",
-    "## Extracting the gene PIKCA3 from the VEP files\n",
-    "subprocess.run([\"snakemake\", \"--cores\", \"1\", \"parsing_dataR\"])\n"
+    "    ## VEP CLI\n",
+    "    for sample in sample_list:\n",
+    "        subprocess.run([\n",
+    "            \"snakemake\", \"--cores\", \"1\", \"--use-conda\", \n",
+    "            \"results/variants/vep/\" + sample + \"_\" + chr + \".txt\"\n",
+    "        ])\n",
+    "    \n",
+    "    ## Extracting the gene from the VEP files\n",
+    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"parsing_dataR\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chromosome 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snake_workflow(\"chr3\")"
    ]
   },
   {
@@ -162,12 +205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "changes_chr3_to_5 = [\"6,+12s/chr3/chr5/g\", \"24,+12s/chr3/chr5/g\", \"39s/chr3/chr5/g\",\n",
-    "                    \"46s/chromosome.3.fa.gz/chromosome.5.fa.gz/g\", \"65s/PIK3CA/APC/g\"]\n",
+    "                     \"46s/chromosome.3.fa.gz/chromosome.5.fa.gz/g\", \"65s/PIK3CA/APC/g\"]\n",
     "for change in changes_chr3_to_5:\n",
     "    subprocess.run([\"sed\", \"-i\", change, \"config.yaml\"])"
    ]
@@ -178,34 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Running the workflow for the 5º chormosome\n",
-    "\n",
-    "subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--force\", \"data/reference/genome.fa\"]) ## rule reference_genome \n",
-    "\n",
-    "for sample in sample_list:\n",
-    "    ## Quality inspection\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\",\n",
-    "                    \"results/fastqc_result/\" + sample + \"_chr5_1_fastqc.html\",   \n",
-    "                    \"data/processed/\" + sample + \"_chr5_1_fastp.fastq.gz\",   \n",
-    "                    \"results/fastqc_result/trimmed/\" + sample + \"_chr5_1_fastp_fastqc.html\"])\n",
-    "    \n",
-    "for sample in sample_list:\n",
-    "    ## Mapping reads\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\",\n",
-    "                    \"results/mapped_reads/\" + sample + \"_chr5_sorted.sam\",   \n",
-    "                    \"results/mapped_reads/bam_files/\" + sample + \"_chr5_sorted.bam\",   \n",
-    "                    \"results/mapped_reads/bam_files/\" + sample + \"_chr5_dedup.bam\"])\n",
-    "    \n",
-    "for sample in sample_list:\n",
-    "    # Extracting variants  \n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"results/variants/\" + sample + \"_chr5.vcf\"])   \n",
-    "\n",
-    "## VEP CLI\n",
-    "for sample in sample_list:\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"results/variants/vep/\" + sample + \"_chr5.txt\"])\n",
-    "\n",
-    "## Extracting the gene PIKCA3 from the VEP files\n",
-    "subprocess.run([\"snakemake\", \"--cores\", \"1\", \"parsing_dataR\"])"
+    "snake_workflow(\"chr5\")"
    ]
   },
   {
@@ -217,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,34 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Running the workflow for the 7º chormosome\n",
-    "\n",
-    "subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--force\", \"data/reference/genome.fa\"]) ## rule reference_genome \n",
-    "\n",
-    "for sample in sample_list:\n",
-    "    ## Quality inspection\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\",\n",
-    "                    \"results/fastqc_result/\" + sample + \"_chr7_1_fastqc.html\",   \n",
-    "                    \"data/processed/\" + sample + \"_chr7_1_fastp.fastq.gz\",   \n",
-    "                    \"results/fastqc_result/trimmed/\" + sample + \"_chr7_1_fastp_fastqc.html\"])\n",
-    "    \n",
-    "for sample in sample_list:\n",
-    "    ## Mapping reads\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\",\n",
-    "                    \"results/mapped_reads/\" + sample + \"_chr7_sorted.sam\",   \n",
-    "                    \"results/mapped_reads/bam_files/\" + sample + \"_chr7_sorted.bam\",   \n",
-    "                    \"results/mapped_reads/bam_files/\" + sample + \"_chr7_dedup.bam\"])\n",
-    "    \n",
-    "for sample in sample_list:\n",
-    "    # Extracting variants  \n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"results/variants/\" + sample + \"_chr7.vcf\"])   \n",
-    "\n",
-    "## VEP CLI\n",
-    "for sample in sample_list:\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"results/variants/vep/\" + sample + \"_chr7.txt\"])\n",
-    "\n",
-    "## Extracting the gene PIKCA3 from the VEP files\n",
-    "subprocess.run([\"snakemake\", \"--cores\", \"1\", \"parsing_dataR\"])"
+    "snake_workflow(\"chr7\")"
    ]
   },
   {
@@ -272,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,34 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Running the workflow for the 12º chormosome\n",
-    "\n",
-    "subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--force\", \"data/reference/genome.fa\"]) ## rule reference_genome \n",
-    "\n",
-    "for sample in sample_list:\n",
-    "    ## Quality inspection\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\",\n",
-    "                    \"results/fastqc_result/\" + sample + \"_chr12_1_fastqc.html\",   \n",
-    "                    \"data/processed/\" + sample + \"_chr12_1_fastp.fastq.gz\",   \n",
-    "                    \"results/fastqc_result/trimmed/\" + sample + \"_chr12_1_fastp_fastqc.html\"])\n",
-    "    \n",
-    "for sample in sample_list:\n",
-    "    ## Mapping reads\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\",\n",
-    "                    \"results/mapped_reads/\" + sample + \"_chr12_sorted.sam\",   \n",
-    "                    \"results/mapped_reads/bam_files/\" + sample + \"_chr12_sorted.bam\",   \n",
-    "                    \"results/mapped_reads/bam_files/\" + sample + \"_chr12_dedup.bam\"])\n",
-    "    \n",
-    "for sample in sample_list:\n",
-    "    # Extracting variants  \n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"results/variants/\" + sample + \"_chr12.vcf\"])   \n",
-    "\n",
-    "## VEP CLI\n",
-    "for sample in sample_list:\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"results/variants/vep/\" + sample + \"_chr12.txt\"])\n",
-    "\n",
-    "## Extracting the gene PIKCA3 from the VEP files\n",
-    "subprocess.run([\"snakemake\", \"--cores\", \"1\", \"parsing_dataR\"])"
+    "snake_workflow(\"chr12\")"
    ]
   },
   {
@@ -327,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,39 +305,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Running the workflow for the 17º chormosome\n",
-    "\n",
-    "subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--force\", \"data/reference/genome.fa\"]) ## rule reference_genome \n",
-    "\n",
-    "for sample in sample_list:\n",
-    "    ## Quality inspection\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\",\n",
-    "                    \"results/fastqc_result/\" + sample + \"_chr17_1_fastqc.html\",   \n",
-    "                    \"data/processed/\" + sample + \"_chr17_1_fastp.fastq.gz\",   \n",
-    "                    \"results/fastqc_result/trimmed/\" + sample + \"_chr17_1_fastp_fastqc.html\"])\n",
-    "    \n",
-    "for sample in sample_list:\n",
-    "    ## Mapping reads\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\",\n",
-    "                    \"results/mapped_reads/\" + sample + \"_chr17_sorted.sam\",   \n",
-    "                    \"results/mapped_reads/bam_files/\" + sample + \"_chr17_sorted.bam\",   \n",
-    "                    \"results/mapped_reads/bam_files/\" + sample + \"_chr17_dedup.bam\"])\n",
-    "    \n",
-    "for sample in sample_list:\n",
-    "    # Extracting variants  \n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"results/variants/\" + sample + \"_chr17.vcf\"])   \n",
-    "\n",
-    "## VEP CLI\n",
-    "for sample in sample_list:\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"results/variants/vep/\" + sample + \"_chr17.txt\"])\n",
-    "\n",
-    "## Extracting the gene PIKCA3 from the VEP files\n",
-    "subprocess.run([\"snakemake\", \"--cores\", \"1\", \"parsing_dataR\"])"
+    "snake_workflow(\"chr17\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
