añadir las instrucciones a un repositorio docs

--- a/docs/instructions.ipynb
+++ b/docs/instructions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Example of the commands need it to execute the rules\n",
     "\n",
-    "Not completlt necessary to follow this instructions, in some cases would be better to do some samples separated of each other."
+    "Not completly necessary to follow this instructions, in some cases would be better to do some samples separated of each other."
    ]
   },
   {
@@ -35,7 +35,7 @@
    "source": [
     "* Install all Conda enviroments, choose to use conda or mamba:\n",
     "\n",
-    "* Command ```mamba env install -f env.yml```\n",
+    "* Command ```mamba env install -f /path/to/env.yml```\n",
     "\n",
     "    * [Gereference_tools](../../environments/Greference_tools.yml)\n",
     "    * [vep](../../environments/vep.yml)\n",
@@ -43,6 +43,15 @@
     "    * [igv_viz](../../environments/igv_viz.yml)\n",
     "\n",
     "* Activate the first environment ```conda activate Greference_tools```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### To execute the snakemake rules remember to stay in the TFM directory\n",
+    "\n",
+    "* ```cd /your/path/to/TFM```"
    ]
   },
   {
@@ -81,6 +90,24 @@
     "#########################\n",
     "\n",
     "samples:\n",
+    "  ERR696683_chr3: data/original_bam/filtering/ERR696683_chr3.bam \n",
+    "  ERR753368_chr3: data/original_bam/filtering/ERR753368_chr3.bam \n",
+    "  ERR753369_chr3: data/original_bam/filtering/ERR753369_chr3.bam \n",
+    "  ERR753370_chr3: data/original_bam/filtering/ERR753370_chr3.bam \n",
+    "  ERR753371_chr3: data/original_bam/filtering/ERR753371_chr3.bam \n",
+    "  ERR753372_chr3: data/original_bam/filtering/ERR753372_chr3.bam  \n",
+    "  ERR753373_chr3: data/original_bam/filtering/ERR753373_chr3.bam  \n",
+    "  ERR753374_chr3: data/original_bam/filtering/ERR753374_chr3.bam \n",
+    "  ERR753375_chr3: data/original_bam/filtering/ERR753375_chr3.bam \n",
+    "  ERR753376_chr3: data/original_bam/filtering/ERR753376_chr3.bam \n",
+    "  ERR753377_chr3: data/original_bam/filtering/ERR753377_chr3.bam \n",
+    "  ERR753378_chr3: data/original_bam/filtering/ERR753378_chr3.bam  \n",
+    "\n",
+    "########################\n",
+    "##  SNAKEFILE PARAMS  ##\n",
+    "########################\n",
+    "\n",
+    "samples_names:\n",
     "  ERR696683_chr3\n",
     "  ERR753368_chr3\n",
     "  ERR753369_chr3\n",
@@ -94,9 +121,6 @@
     "  ERR753377_chr3\n",
     "  ERR753378_chr3\n",
     "\n",
-    "########################\n",
-    "##  SNAKEFILE PARAMS  ##\n",
-    "########################\n",
     "\n",
     "## Choose your chromosome\n",
     "chromosome: chr3 \n",
@@ -125,7 +149,7 @@
     "\n",
     "## Gene That you want to filter in the VCF using R\n",
     "## PIK3CA (chromosome 3); APC (chromosome 5); BRAF (chromosome 7); KRAS (chromosome 12) ;TP53 (chromosome 17)\n",
-    "gene_to_filterR: PIK3CA"
+    "gene_to_filterR: PIK3CA   \n"
    ]
   },
   {
@@ -187,7 +211,95 @@
    "metadata": {},
    "source": [
     "* Change the values of the config.yaml.\n",
-    "* Chromosmes, reference genome and the gene that you are looking for "
+    "    * Chromosmes \n",
+    "    * Reference genome \n",
+    "    * And the gene\n",
+    "\n",
+    "* Example of the config.file with x where you have to change one of this params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#########################\n",
+    "##  SNAKEFILE SAMPLES  ##\n",
+    "#########################\n",
+    "\n",
+    "samples:\n",
+    "  ERR696683_chr3: data/original_bam/filtering/ERR696683_chrx.bam \n",
+    "  ERR753368_chr3: data/original_bam/filtering/ERR753368_chrx.bam \n",
+    "  ERR753369_chr3: data/original_bam/filtering/ERR753369_chrx.bam \n",
+    "  ERR753370_chr3: data/original_bam/filtering/ERR753370_chrx.bam \n",
+    "  ERR753371_chr3: data/original_bam/filtering/ERR753371_chrx.bam \n",
+    "  ERR753372_chr3: data/original_bam/filtering/ERR753372_chrx.bam  \n",
+    "  ERR753373_chr3: data/original_bam/filtering/ERR753373_chrx.bam  \n",
+    "  ERR753374_chr3: data/original_bam/filtering/ERR753374_chrx.bam \n",
+    "  ERR753375_chr3: data/original_bam/filtering/ERR753375_chrx.bam \n",
+    "  ERR753376_chr3: data/original_bam/filtering/ERR753376_chrx.bam \n",
+    "  ERR753377_chr3: data/original_bam/filtering/ERR753377_chrx.bam \n",
+    "  ERR753378_chr3: data/original_bam/filtering/ERR753378_chrx.bam  \n",
+    "\n",
+    "########################\n",
+    "##  SNAKEFILE PARAMS  ##\n",
+    "########################\n",
+    "\n",
+    "samples_names:\n",
+    "  ERR696683_chrx \n",
+    "  ERR753368_chrx \n",
+    "  ERR753369_chrx\n",
+    "  ERR753370_chrx\n",
+    "  ERR753371_chrx\n",
+    "  ERR753372_chrx\n",
+    "  ERR753373_chrx\n",
+    "  ERR753374_chrx\n",
+    "  ERR753375_chrx\n",
+    "  ERR753376_chrx\n",
+    "  ERR753377_chrx\n",
+    "  ERR753378_chrx\n",
+    "\n",
+    "\n",
+    "## Choose your chromosome\n",
+    "chromosome: chrx \n",
+    "# Chromosome 3, 5, 7, 12, 17 ENSEMBL:\n",
+    "# https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.3.fa.gz \n",
+    "# https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.5.fa.gz\n",
+    "# https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.7.fa.gz\n",
+    "# https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.12.fa.gz\n",
+    "# https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.17.fa.gz\n",
+    "url_reference_genome: https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.x.fa.gz\n",
+    "\n",
+    "## Fixing the fastq files, FASTP parameters:\n",
+    "fastp_cuttail: 30\n",
+    "fastp_cutfront: 30\n",
+    "fastp_cutmeanq: 30\n",
+    "fastp_length: 75\n",
+    "\n",
+    "## Extracting variants\n",
+    "ref_genome_name_file: genome.fa\n",
+    "# Min reads that has to be mapping to considerate a variant\n",
+    "min_reads_variant: 5\n",
+    "\n",
+    "## Doing VEP for variant annotation\n",
+    "vep_species: homo_sapiens\n",
+    "vep_assembly: GRCh38\n",
+    "\n",
+    "## Gene That you want to filter in the VCF using R\n",
+    "## PIK3CA (chromosome 3); APC (chromosome 5); BRAF (chromosome 7); KRAS (chromosome 12) ;TP53 (chromosome 17)\n",
+    "gene_to_filterR: x   \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Execute this commands in the CLI for the rest of chromosomes "
    ]
   },
   {
