chromosomex config.file error

--- a/docs/instructions.ipynb
+++ b/docs/instructions.ipynb
@@ -233,18 +233,18 @@
     "#########################\n",
     "\n",
     "samples:\n",
-    "  ERR696683_chr3: data/original_bam/filtering/ERR696683_chrx.bam \n",
-    "  ERR753368_chr3: data/original_bam/filtering/ERR753368_chrx.bam \n",
-    "  ERR753369_chr3: data/original_bam/filtering/ERR753369_chrx.bam \n",
-    "  ERR753370_chr3: data/original_bam/filtering/ERR753370_chrx.bam \n",
-    "  ERR753371_chr3: data/original_bam/filtering/ERR753371_chrx.bam \n",
-    "  ERR753372_chr3: data/original_bam/filtering/ERR753372_chrx.bam  \n",
-    "  ERR753373_chr3: data/original_bam/filtering/ERR753373_chrx.bam  \n",
-    "  ERR753374_chr3: data/original_bam/filtering/ERR753374_chrx.bam \n",
-    "  ERR753375_chr3: data/original_bam/filtering/ERR753375_chrx.bam \n",
-    "  ERR753376_chr3: data/original_bam/filtering/ERR753376_chrx.bam \n",
-    "  ERR753377_chr3: data/original_bam/filtering/ERR753377_chrx.bam \n",
-    "  ERR753378_chr3: data/original_bam/filtering/ERR753378_chrx.bam  \n",
+    "  ERR696683_chrx: data/original_bam/filtering/ERR696683_chrx.bam \n",
+    "  ERR753368_chrx: data/original_bam/filtering/ERR753368_chrx.bam \n",
+    "  ERR753369_chrx: data/original_bam/filtering/ERR753369_chrx.bam \n",
+    "  ERR753370_chrx: data/original_bam/filtering/ERR753370_chrx.bam \n",
+    "  ERR753371_chrx: data/original_bam/filtering/ERR753371_chrx.bam \n",
+    "  ERR753372_chrx: data/original_bam/filtering/ERR753372_chrx.bam  \n",
+    "  ERR753373_chrx: data/original_bam/filtering/ERR753373_chrx.bam  \n",
+    "  ERR753374_chrx: data/original_bam/filtering/ERR753374_chrx.bam \n",
+    "  ERR753375_chrx: data/original_bam/filtering/ERR753375_chrx.bam \n",
+    "  ERR753376_chrx: data/original_bam/filtering/ERR753376_chrx.bam \n",
+    "  ERR753377_chrx: data/original_bam/filtering/ERR753377_chrx.bam \n",
+    "  ERR753378_chrx: data/original_bam/filtering/ERR753378_chrx.bam  \n",
     "\n",
     "########################\n",
     "##  SNAKEFILE PARAMS  ##\n",
