corregir las rutas de los ambientes conda

--- a/docs/instructions.ipynb
+++ b/docs/instructions.ipynb
@@ -37,10 +37,10 @@
     "\n",
     "* Command ```mamba env install -f /path/to/env.yml```\n",
     "\n",
-    "    * [Gereference_tools](../../environments/Greference_tools.yml)\n",
-    "    * [vep](../../environments/vep.yml)\n",
-    "    * [biostatistcsR](../../environments/biostatisticsR.yml)\n",
-    "    * [igv_viz](../../environments/igv_viz.yml)\n",
+    "    * [Gereference_tools](../code/environments/Greference_tools.yml)\n",
+    "    * [vep](../code/environments/vep.yml)\n",
+    "    * [biostatistcsR](../code/environments/biostatisticsR.yml)\n",
+    "    * [igv_viz](../code/environments/igv_viz.yml)\n",
     "\n",
     "* Activate the first environment ```conda activate Greference_tools```."
    ]
