rute to auto_snakemake

--- a/docs/instructions.ipynb
+++ b/docs/instructions.ipynb
@@ -158,7 +158,7 @@
    "source": [
     "* Copy each command in the CLI, one by one\n",
     "\n",
-    "On the other hand, you could use the notebook [automate_snakemake](../../../auto_snakemake.ipynb) for a more automate version. It is true that it is not perfect, and if there are errors (problems downloading the data from the servers for example), could be a problem detecting them."
+    "On the other hand, you could use the notebook [automate_snakemake](../auto_snakemake.ipynb) for a more automate version. It is true that it is not perfect, and if there are errors (problems downloading the data from the servers for example), could be a problem detecting them."
    ]
   },
   {
