Hacer un apunte sobre la obtención de la table3

--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -70,7 +70,9 @@
     "\n",
     "You have to copy the table and run the function.\n",
     "\n",
-    "https://onlinelibrary.wiley.com/action/downloadSupplement?doi=10.1002%2Fgcc.22314&file=gcc22314-sup-0005-supptable5.docx"
+    "https://onlinelibrary.wiley.com/action/downloadSupplement?doi=10.1002%2Fgcc.22314&file=gcc22314-sup-0005-supptable5.docx\n",
+    "\n",
+    "### If the file [table3](../../../metadata/table3.csv) already exists (click the link to see), **it is better not to run the code of the next three cells**"
    ]
   },
   {
