añadir un --use-conda

--- a/auto_snakemake.ipynb
+++ b/auto_snakemake.ipynb
@@ -177,7 +177,7 @@
     "        ])\n",
     "    \n",
     "    ## Extracting the gene from the VEP files\n",
-    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"parsing_dataR\"])\n"
+    "    subprocess.run([\"snakemake\", \"--cores\", \"1\", \"--use-conda\", \"parsing_dataR\"])\n"
    ]
   },
   {
